- Split parsing bits of the PLC code into separate files (PLC_Parser.cpp and PLC_Parser.h) to make things just a bit more organized.  - Reworked the parser code a bit to streamline things, added logicOP object, which serves as a helper for forming the proper (AND/OR) logic orders when parsing.
 - Still needs work for nested objects, will likely replace the parser with a new design in future commits.

 - Also setting the stage for inline object declarations, though this is not yet fully implemented.

-Andrew Ward

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -24,3 +24,8 @@ With regards to the scope of the project as it pertains to the demonstration for
 -Finish support for analog inputs and outputs.
 
 - Finish IO expansion via network interface between ESPLC devices.
+
+- Allow for declaration of inline objects (for basic math comparisons, etc.). 
+		- Inline declaration syntax INPUT(NAME,PIN,ARGS). 
+		- Additional attempts to declare a new object of the 		same name will result in a failure. 
+		- Simple objects do not require a name, but may be assigned one.
